<resources>
    <string name="app_name">ParkingLot-ADN</string>
    <string name="plate">Plate</string>
    <string name="add">Add vehicle</string>
    <string name="field_not_empty">This field not empty</string>
    <string name="parking_lot">Parking Lot CEIBA</string>
    <string name="cylindrical">Cylindrical</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="no_space">There is no space</string>
    <string name="can_add">Can save</string>
    <string name="invalid_plate_day">You cannot save yout vehicle today</string>
    <string name="successfully_saved">Car successfully saved</string>
    <string name="no_car">There are no cars</string>
    <string name="show_cars">Show list cars</string>
    <string name="add_motorcycle">Add motorcycle</string>
    <string name="search">Search</string>
    <string name="get_out">Get out</string>
    <string name="show_motorcycles">Show list motorcycles</string>
    <string name="show_registers">Show registers</string>
    <string name="information">Intormation</string>
    <string name="ok">Ok</string>
    <string name="site">Site</string>
    <string name="action">Action</string>
    <string name="type">Type</string>
    <string name="send">Send</string>
    <string name="error">Error</string>
    <string name="no_permission">You cannot enter today</string>
    <string name="site_occupied">This space is already occupied</string>
    <string name="plate_exist">This vehicle is already registered</string>
    <string name="date_admission">Date of admission</string>
    <string name="plate_not_exist">This vehicle is not registered</string>
    <string name="empty">This list is empty</string>
    <string name="not_delete">It is not possible to delete</string>
</resources>
