<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.ceiba.parkinglot_adn.presentation.presenters.MainPresenter" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.views.MainActivity">

        <TextView
            android:id="@+id/tv_title"
            style="@style/CustomTextView.Title"
            android:text="@string/parking_lot"
            android:textAlignment="center" />

        <RadioGroup
            android:id="@+id/rg_type"
            style="@style/CustomRadioGroup"
            android:layout_below="@id/tv_title"
            android:checkedButton="@={view.type}"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="@{() -> view.hideCylindricalField()}"
                android:text="@string/car" />

            <RadioButton
                android:id="@+id/rb_motorcycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> view.showCylindricalField()}"
                android:text="@string/motorcycle" />
        </RadioGroup>

        <EditText
            android:id="@+id/et_plate"
            style="@style/CustomEditText"
            android:layout_below="@id/rg_type"
            android:hint="@string/plate"
            android:text="@={view.plate}" />

        <EditText
            android:id="@+id/et_cylindrical"
            style="@style/CustomEditText"
            android:layout_below="@id/et_plate"
            android:hint="@string/cylindrical"
            android:text="@={view.cylindrical}" />

        <Button
            android:id="@+id/bt_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_cylindrical"
            android:onClick="onClick"
            android:text="@string/send" />

        <Button
            android:id="@+id/bt_show_cars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_send"
            android:drawableTop="@drawable/ic_list_black_24dp"
            android:onClick="onClick"
            android:text="@string/show_cars" />


    </RelativeLayout>
</layout>